--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,11 @@
   <!-- Make the page mobile compatible -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
-
+  <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
   <link rel="icon" href="../K-life-favicon.png" />
   <title>K-Life</title>
 </head>
