--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
   <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
-  <link rel="icon" href="../K-life-favicon.png" />
+  <link rel="icon" href="./favicon.ico" />
   <title>K-Life</title>
 </head>
 
